feat: Add OpenAI Assistants integration
Full integration for OpenAI Assistants API:

OpenAIAssistantsTracker:
- Wrap any OpenAI client: tracker.wrap(client)
- Auto-logs: runs, steps, tool calls, messages
- Tracks token usage and duration
- Supports both sync and streaming

AssistantEventHandler:
- For streaming runs
- Real-time event logging as stream progresses

track_assistant_run decorator:
- Simple decorator for tracking assistant tasks

Captures:
- Run creation, completion, errors
- Individual run steps
- Tool calls with inputs/outputs
- Message content (optional)
- Token usage stats

Updated:
- README with integration docs
- requirements.txt with optional deps
- Version bump to 0.2.0
- Phase 2 marked complete in roadmap

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@
 fastapi>=0.109.0
 uvicorn>=0.27.0
 pydantic>=2.5.0
+websockets>=12.0
 
 # SDK
 requests>=2.31.0
 
-# Optional: LangChain integration
-# langchain>=0.1.0
+# Optional integrations (uncomment as needed)
+# openai>=1.12.0  # For OpenAI Assistants integration
+# langchain>=0.1.0  # For LangChain integration
