feat: Add CrewAI integration
Complete CrewAI support for multi-agent tracking:

CrewAITracker:
- Wrap any Crew: tracker.wrap(crew)
- Auto-logs: crew kickoff, task execution, completion
- Tracks agent delegation between crew members
- Creates agent entities with relationships
- Duration and output tracking

CrewAICallback:
- Callback-based alternative
- on_crew_start/end, on_task_start/end
- on_agent_action, on_tool_use

Captures:
- Crew composition (agents + tasks)
- Individual task execution per agent
- Inter-agent delegation events
- Tool usage by agents
- Task outputs and durations

All three major frameworks now supported:
- LangChain ✅
- OpenAI Assistants ✅
- CrewAI ✅

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,4 @@ requests>=2.31.0
 # Optional integrations (uncomment as needed)
 # openai>=1.12.0  # For OpenAI Assistants integration
 # langchain>=0.1.0  # For LangChain integration
+# crewai>=0.28.0  # For CrewAI integration
