--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,10 @@ server = [
     "pydantic>=2.5.0",
     "websockets>=12.0",
 ]
+search = [
+    "sentence-transformers>=2.2.0",
+    "scikit-learn>=1.0.0",
+]
 openai = ["openai>=1.12.0"]
 langchain = ["langchain>=0.1.0"]
 crewai = ["crewai>=0.28.0"]
@@ -45,6 +49,8 @@ all = [
     "uvicorn>=0.27.0",
     "pydantic>=2.5.0",
     "websockets>=12.0",
+    "sentence-transformers>=2.2.0",
+    "scikit-learn>=1.0.0",
     "openai>=1.12.0",
     "langchain>=0.1.0",
     "crewai>=0.28.0",
