--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,7 @@ requests>=2.31.0
 # openai>=1.12.0  # For OpenAI Assistants integration
 # langchain>=0.1.0  # For LangChain integration
 # crewai>=0.28.0  # For CrewAI integration
+
+# Optional: Semantic search
+# sentence-transformers>=2.2.0  # For embedding-based search
+# scikit-learn>=1.0.0  # For TF-IDF fallback
