--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ search = [
 openai = ["openai>=1.12.0"]
 langchain = ["langchain>=0.1.0"]
 crewai = ["crewai>=0.28.0"]
+mcp = ["mcp[cli]>=1.0.0"]
 all = [
     "fastapi>=0.109.0",
     "uvicorn>=0.27.0",
@@ -54,10 +55,13 @@ all = [
     "openai>=1.12.0",
     "langchain>=0.1.0",
     "crewai>=0.28.0",
+    "mcp[cli]>=1.0.0",
 ]
 
 [project.scripts]
 agentgraph-server = "agentgraph.api.server:run_server"
+agentgraph-mcp = "agentgraph.mcp.server:main"
+agentgraph = "agentgraph.cli:main"
 
 [project.urls]
 Homepage = "https://github.com/ICE-CUBA/AgentGraph"
