chore: Rename package to agentgraph-ai for PyPI availability
- Python: pip install agentgraph-ai
- npm: npm install agentgraph-ai
- Internal module remains 'agentgraph' for simplicity
- Updated all documentation

--- a/js/package.json
+++ b/js/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "agentgraph",
+  "name": "agentgraph-ai",
   "version": "0.2.0",
   "description": "The Memory Layer for AI Agents - Track, visualize, and share context between AI agents",
   "main": "dist/index.js",
