--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "agentgraph"
+name = "agentgraph-ai"
 version = "0.2.0"
 description = "The Memory Layer for AI Agents - Track, visualize, and share context between AI agents"
 readme = "README.md"
